--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <title>Document</title>
 </head>
+
 <body>
    <h1>gitisgood</h1>
+   <h1>gitisgood</h1>
 </body>
+
 </html>
